# ps3dec

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yml
src/: args.rs  autodetect.rs  lib.rs  main.rs  utils.rs
