[package]
name = "PS3DECREMAKE_CLI"
version = "0.2.0"
edition = "2021"
authors = ["Y.sellami"]

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
aes = "0.8.4"
hex = "0.4.3"
indicatif = "0.17.8"
rayon = "1.9.0"
cbc = { version = "0.1.2", features = ["alloc"] }
generic-array = "1.0.0"
block-modes = "0.9.1"
log = "0.4"
log4rs = "1.0"
chrono = "0.4"
console = "0.15.8"
config = "0.14.0"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[lib]
name = "ps3decremake"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ps3decremake_cli"
path = "src/main.rs"